Fixed the click issue on buttons. They stay blue on mobile devices. Made sure the color matches the primary button color.

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -304,6 +304,10 @@ a.bg-primary:hover {
   background-color: #C1D72E;
       border-color: #C1D72E;
 }
+.btn-primary:hover {
+  background-color: #C1D72E;
+  border-color: #C1D72E;
+}
 .btn-primary.disabled,
 .btn-primary[disabled],
 fieldset[disabled] .btn-primary,
